@@ -15,75 +15,94 @@ package io.trino.sql.query;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
-import io.trino.connector.CatalogName;
 import io.trino.connector.MockConnectorFactory;
+import io.trino.connector.MockConnectorPlugin;
+import io.trino.connector.MockConnectorTableHandle;
+import io.trino.connector.TestingTableFunctions.SimpleTableFunction;
 import io.trino.spi.connector.ColumnMetadata;
+import io.trino.spi.connector.ConnectorViewDefinition;
 import io.trino.spi.connector.SchemaTableName;
-import io.trino.testing.LocalQueryRunner;
-import org.testng.annotations.AfterClass;
-import org.testng.annotations.BeforeClass;
-import org.testng.annotations.Test;
+import io.trino.spi.session.PropertyMetadata;
+import io.trino.testing.QueryRunner;
+import io.trino.testing.StandaloneQueryRunner;
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.TestInstance;
+import org.junit.jupiter.api.parallel.Execution;
 
-import java.util.List;
+import java.util.Optional;
 
 import static io.trino.spi.type.BigintType.BIGINT;
-import static io.trino.testing.TestingSession.createBogusTestingCatalog;
 import static io.trino.testing.TestingSession.testSessionBuilder;
 import static org.assertj.core.api.Assertions.assertThat;
-import static org.assertj.core.api.Assertions.assertThatThrownBy;
-import static org.testng.Assert.assertEquals;
+import static org.junit.jupiter.api.TestInstance.Lifecycle.PER_CLASS;
+import static org.junit.jupiter.api.parallel.ExecutionMode.CONCURRENT;
 
+@TestInstance(PER_CLASS)
+@Execution(CONCURRENT)
 public class TestShowQueries
 {
-    private QueryAssertions assertions;
+    private final QueryAssertions assertions;
 
-    @BeforeClass
-    public void init()
+    public TestShowQueries()
     {
-        LocalQueryRunner queryRunner = LocalQueryRunner.create(testSessionBuilder()
+        QueryRunner queryRunner = new StandaloneQueryRunner(testSessionBuilder()
                 .setCatalog("local")
                 .setSchema("default")
                 .build());
-        queryRunner.createCatalog(
-                "mock",
-                MockConnectorFactory.builder()
-                        .withGetColumns(schemaTableName ->
-                                ImmutableList.of(
-                                        ColumnMetadata.builder()
-                                                .setName("colaa")
-                                                .setType(BIGINT)
-                                                .build(),
-                                        ColumnMetadata.builder()
-                                                .setName("cola_")
-                                                .setType(BIGINT)
-                                                .build(),
-                                        ColumnMetadata.builder()
-                                                .setName("colabc")
-                                                .setType(BIGINT)
-                                                .build()))
-                        .withListSchemaNames(session -> ImmutableList.of("mockschema"))
-                        .withListTables((session, schemaName) -> ImmutableList.of(new SchemaTableName("mockSchema", "mockTable")))
-                        .build(),
-                ImmutableMap.of());
-        queryRunner.getCatalogManager().registerCatalog(createBogusTestingCatalog("testing_catalog"));
-        queryRunner.getMetadata().getSessionPropertyManager().addConnectorSessionProperties(new CatalogName("testing_catalog"), List.of());
+        queryRunner.installPlugin(new MockConnectorPlugin(MockConnectorFactory.builder()
+                .withGetColumns(schemaTableName -> ImmutableList.of(
+                        ColumnMetadata.builder()
+                                .setName("colaa")
+                                .setType(BIGINT)
+                                .build(),
+                        ColumnMetadata.builder()
+                                .setName("cola_")
+                                .setType(BIGINT)
+                                .build(),
+                        ColumnMetadata.builder()
+                                .setName("colabc")
+                                .setType(BIGINT)
+                                .build()))
+                .withListSchemaNames(session -> ImmutableList.of("mockschema"))
+                .withListTables((session, schemaName) -> ImmutableList.of("mockTable"))
+                .withTableFunctions(ImmutableList.of(new SimpleTableFunction()))
+                .withGetTableHandle((session, schemaTableName) -> {
+                    if (schemaTableName.getTableName().equals("mockview")) {
+                        return null;
+                    }
+                    return new MockConnectorTableHandle(schemaTableName);
+                })
+                .withGetViews((session, schemaTablePrefix) -> ImmutableMap.of(
+                        new SchemaTableName("mockschema", "mockview"), new ConnectorViewDefinition(
+                                "SELECT cola_ AS test_column FROM mock_table",
+                                Optional.empty(),
+                                Optional.empty(),
+                                ImmutableList.of(new ConnectorViewDefinition.ViewColumn("test_column", BIGINT.getTypeId(), Optional.empty())),
+                                Optional.empty(),
+                                Optional.empty(),
+                                true,
+                                ImmutableList.of())))
+                .withGetViewProperties(() -> ImmutableList.of(PropertyMetadata.booleanProperty("boolean_property", "sample_property", true, false)))
+                .build()));
+        queryRunner.createCatalog("mock", "mock", ImmutableMap.of());
+        queryRunner.createCatalog("testing_catalog", "mock", ImmutableMap.of());
         assertions = new QueryAssertions(queryRunner);
     }
 
-    @AfterClass(alwaysRun = true)
+    @AfterAll
     public void teardown()
     {
         assertions.close();
-        assertions = null;
     }
 
     @Test
     public void testShowCatalogsLikeWithEscape()
     {
-        assertThatThrownBy(() -> assertions.query("SHOW CATALOGS LIKE 't$_%' ESCAPE ''"))
-                .hasMessage("Escape string must be a single character");
-        assertThatThrownBy(() -> assertions.query("SHOW CATALOGS LIKE 't$_%' ESCAPE '$$'"))
-                .hasMessage("Escape string must be a single character");
+        assertThat(assertions.query("SHOW CATALOGS LIKE 't$_%' ESCAPE ''"))
+                .failure().hasMessage("Escape string must be a single character");
+        assertThat(assertions.query("SHOW CATALOGS LIKE 't$_%' ESCAPE '$$'"))
+                .failure().hasMessage("Escape string must be a single character");
         assertThat(assertions.query("SHOW CATALOGS LIKE '%$_%' ESCAPE '$'")).matches("VALUES('testing_catalog')");
         assertThat(assertions.query("SHOW CATALOGS LIKE '$_%' ESCAPE '$'")).matches("SELECT 'testing_catalog' WHERE FALSE");
     }
@@ -92,8 +111,9 @@ public class TestShowQueries
     public void testShowFunctionLike()
     {
         assertThat(assertions.query("SHOW FUNCTIONS LIKE 'split%'"))
+                .skippingTypesCheck()
                 .matches("VALUES " +
-                        "(cast('split' AS VARCHAR(30)), cast('array(varchar(x))' AS VARCHAR(28)), cast('varchar(x), varchar(y)' AS VARCHAR(68)), cast('scalar' AS VARCHAR(9)), true, cast('' AS VARCHAR(131)))," +
+                        "('split', 'array(varchar(x))', 'varchar(x), varchar(y)', 'scalar', true, '')," +
                         "('split', 'array(varchar(x))', 'varchar(x), varchar(y), bigint', 'scalar', true, '')," +
                         "('split_part', 'varchar(x)', 'varchar(x), varchar(y), bigint', 'scalar', true, 'Splits a string by a delimiter and returns the specified field (counting from one)')," +
                         "('split_to_map', 'map(varchar,varchar)', 'varchar, varchar, varchar', 'scalar', true, 'Creates a map using entryDelimiter and keyValueDelimiter')," +
@@ -104,9 +124,31 @@ public class TestShowQueries
     public void testShowFunctionsLikeWithEscape()
     {
         assertThat(assertions.query("SHOW FUNCTIONS LIKE 'split$_to$_%' ESCAPE '$'"))
+                .skippingTypesCheck()
                 .matches("VALUES " +
-                        "(cast('split_to_map' AS VARCHAR(30)), cast('map(varchar,varchar)' AS VARCHAR(28)), cast('varchar, varchar, varchar' AS VARCHAR(68)), cast('scalar' AS VARCHAR(9)), true, cast('Creates a map using entryDelimiter and keyValueDelimiter' AS VARCHAR(131)))," +
+                        "('split_to_map', 'map(varchar,varchar)', 'varchar, varchar, varchar', 'scalar', true, 'Creates a map using entryDelimiter and keyValueDelimiter')," +
                         "('split_to_multimap', 'map(varchar,array(varchar))', 'varchar, varchar, varchar', 'scalar', true, 'Creates a multimap by splitting a string into key/value pairs')");
+    }
+
+    @Test
+    public void testShowFunctionsWithTableFunction()
+    {
+        // The table function exists in testing_catalog and mock catalogs
+        assertThat(assertions.query("SHOW FUNCTIONS FROM mock.system LIKE 'simple$_table$_function' ESCAPE '$'"))
+                .skippingTypesCheck()
+                .matches("VALUES " +
+                        "('simple_table_function', 'unknown', 'varchar, bigint', 'table', false, '')");
+
+        assertThat(assertions.query("SHOW FUNCTIONS FROM testing_catalog.system LIKE 'simple$_table$_function' ESCAPE '$'"))
+                .skippingTypesCheck()
+                .matches("VALUES " +
+                        "('simple_table_function', 'unknown', 'varchar, bigint', 'table', false, '')");
+
+        assertThat(assertions.query("SHOW FUNCTIONS LIKE 'simple$_table$_function' ESCAPE '$'"))
+                .skippingTypesCheck()
+                .matches("VALUES " +
+                        "('simple_table_function', 'unknown', 'varchar, bigint', 'table', false, '')," +
+                        "('simple_table_function', 'unknown', 'varchar, bigint', 'table', false, '')");
     }
 
     @Test
@@ -114,19 +156,21 @@ public class TestShowQueries
     {
         assertThat(assertions.query(
                 "SHOW SESSION LIKE '%page_row_c%'"))
-                .matches("VALUES (cast('filter_and_project_min_output_page_row_count' as VARCHAR(53)), cast('256' as VARCHAR(14)), cast('256' as VARCHAR(14)), 'integer', cast('Experimental: Minimum output page row count for filter and project operators' as VARCHAR(103)))");
+                .skippingTypesCheck()
+                .matches("VALUES ('filter_and_project_min_output_page_row_count', '256', '256', 'integer', 'Experimental: Minimum output page row count for filter and project operators')");
     }
 
     @Test
     public void testShowSessionLikeWithEscape()
     {
-        assertThatThrownBy(() -> assertions.query("SHOW SESSION LIKE 't$_%' ESCAPE ''"))
-                .hasMessage("Escape string must be a single character");
-        assertThatThrownBy(() -> assertions.query("SHOW SESSION LIKE 't$_%' ESCAPE '$$'"))
-                .hasMessage("Escape string must be a single character");
+        assertThat(assertions.query("SHOW SESSION LIKE 't$_%' ESCAPE ''"))
+                .failure().hasMessage("Escape string must be a single character");
+        assertThat(assertions.query("SHOW SESSION LIKE 't$_%' ESCAPE '$$'"))
+                .failure().hasMessage("Escape string must be a single character");
         assertThat(assertions.query(
                 "SHOW SESSION LIKE '%page$_row$_c%' ESCAPE '$'"))
-                .matches("VALUES (cast('filter_and_project_min_output_page_row_count' as VARCHAR(53)), cast('256' as VARCHAR(14)), cast('256' as VARCHAR(14)), 'integer', cast('Experimental: Minimum output page row count for filter and project operators' as VARCHAR(103)))");
+                .skippingTypesCheck()
+                .matches("VALUES ('filter_and_project_min_output_page_row_count', '256', '256', 'integer', 'Experimental: Minimum output page row count for filter and project operators')");
     }
 
     @Test
@@ -170,17 +214,32 @@ public class TestShowQueries
                         "(VARCHAR 'node_version', VARCHAR 'varchar' , VARCHAR '', VARCHAR '')");
         assertThat(assertions.query("SHOW COLUMNS FROM system.runtime.nodes LIKE 'node_id'"))
                 .matches("VALUES (VARCHAR 'node_id', VARCHAR 'varchar' , VARCHAR '', VARCHAR '')");
-        assertEquals(assertions.execute("SHOW COLUMNS FROM system.runtime.nodes LIKE ''").getRowCount(), 0);
+        assertThat(assertions.execute("SHOW COLUMNS FROM system.runtime.nodes LIKE ''").getRowCount()).isEqualTo(0);
     }
 
     @Test
     public void testShowColumnsWithLikeWithEscape()
     {
-        assertThatThrownBy(() -> assertions.query("SHOW COLUMNS FROM system.runtime.nodes LIKE 't$_%' ESCAPE ''"))
-                .hasMessage("Escape string must be a single character");
-        assertThatThrownBy(() -> assertions.query("SHOW COLUMNS FROM system.runtime.nodes LIKE 't$_%' ESCAPE '$$'"))
-                .hasMessage("Escape string must be a single character");
+        assertThat(assertions.query("SHOW COLUMNS FROM system.runtime.nodes LIKE 't$_%' ESCAPE ''"))
+                .failure().hasMessage("Escape string must be a single character");
+        assertThat(assertions.query("SHOW COLUMNS FROM system.runtime.nodes LIKE 't$_%' ESCAPE '$$'"))
+                .failure().hasMessage("Escape string must be a single character");
         assertThat(assertions.query("SHOW COLUMNS FROM mock.mockSchema.mockTable LIKE 'cola$_' ESCAPE '$'"))
                 .matches("VALUES (VARCHAR 'cola_', VARCHAR 'bigint' , VARCHAR '', VARCHAR '')");
+    }
+
+    @Test
+    public void testShowCreateViewWithProperties()
+    {
+        assertThat(assertions.getQueryRunner().execute("SHOW CREATE VIEW mock.mockschema.mockview").getOnlyValue())
+                .isEqualTo(
+                        """
+                        CREATE VIEW mock.mockschema.mockview SECURITY INVOKER
+                        WITH (
+                           boolean_property = true
+                        ) AS
+                        SELECT cola_ test_column
+                        FROM
+                          mock_table""");
     }
 }
