@@ -69,13 +69,14 @@ import static io.trino.plugin.pinot.query.PinotPatterns.predicateValuesList;
 import static io.trino.plugin.pinot.query.PinotPatterns.secondArgument;
 import static io.trino.plugin.pinot.query.PinotPatterns.singleInput;
 import static io.trino.plugin.pinot.query.PinotPatterns.transformFunction;
+import static io.trino.plugin.pinot.query.PinotPatterns.transformFunctionName;
 import static io.trino.plugin.pinot.query.PinotPatterns.transformFunctionType;
+import static io.trino.plugin.pinot.query.PinotTransformFunctionTypeResolver.getTransformFunctionType;
 import static java.lang.String.format;
 import static java.util.Objects.requireNonNull;
 import static java.util.stream.Collectors.joining;
 import static org.apache.pinot.common.function.TransformFunctionType.CASE;
 import static org.apache.pinot.common.function.TransformFunctionType.CAST;
-import static org.apache.pinot.common.function.TransformFunctionType.MINUS;
 import static org.apache.pinot.common.request.context.ExpressionContext.Type.IDENTIFIER;
 import static org.apache.pinot.common.request.context.predicate.RangePredicate.UNBOUNDED;
 import static org.apache.pinot.segment.spi.AggregationFunctionType.COUNT;
@@ -83,6 +84,8 @@ import static org.apache.pinot.segment.spi.AggregationFunctionType.getAggregatio
 
 public class PinotSqlFormatter
 {
+    private static final String MINUS = "minus";
+
     private static final List<Rule<FilterContext>> FILTER_RULES = ImmutableList.<Rule<FilterContext>>builder()
             .add(new AndOrFilterRule())
             .add(new PredicateFilterRule())
@@ -92,6 +95,8 @@ public class PinotSqlFormatter
             .add(new MinusZeroPredicateRule())
             .add(new BinaryOperatorPredicateRule())
             .build();
+
+    private static final List<Rule<FunctionContext>> GLOBAL_FUNCTION_RULES = ImmutableList.of(new MinusFunctionRule());
 
     private static final Map<Predicate.Type, Rule<Predicate>> PREDICATE_RULE_MAP;
     private static final Map<TransformFunctionType, Rule<FunctionContext>> FUNCTION_RULE_MAP;
@@ -113,7 +118,6 @@ public class PinotSqlFormatter
         Map<TransformFunctionType, Rule<FunctionContext>> functionMap = new HashMap<>();
         functionMap.put(CASE, new CaseFunctionRule());
         functionMap.put(CAST, new CastFunctionRule());
-        functionMap.put(MINUS, new MinusFunctionRule());
         FUNCTION_RULE_MAP = immutableEnumMap(functionMap);
 
         Map<AggregationFunctionType, Rule<FunctionContext>> aggregationFunctionMap = new HashMap<>();
@@ -193,28 +197,29 @@ public class PinotSqlFormatter
 
     private static String formatExpression(ExpressionContext expressionContext, Context context)
     {
-        switch (expressionContext.getType()) {
-            case LITERAL:
-                return singleQuoteValue(expressionContext.getLiteral());
-            case IDENTIFIER:
+        return switch (expressionContext.getType()) {
+            case LITERAL -> singleQuoteValue(expressionContext.getLiteral().getValue().toString());
+            case IDENTIFIER -> {
                 if (context.getColumnHandles().isPresent()) {
-                    return quoteIdentifier(getColumnHandle(expressionContext.getIdentifier(), context.getSchemaTableName(), context.getColumnHandles().get()).getColumnName());
+                    yield quoteIdentifier(getColumnHandle(expressionContext.getIdentifier(), context.getSchemaTableName(), context.getColumnHandles().get()).getColumnName());
                 }
-                return quoteIdentifier(expressionContext.getIdentifier());
-            case FUNCTION:
-                return formatFunction(expressionContext.getFunction(), context);
-        }
-        throw new PinotException(PINOT_EXCEPTION, Optional.empty(), format("Unsupported expression type '%s'", expressionContext.getType()));
+                yield quoteIdentifier(expressionContext.getIdentifier());
+            }
+            case FUNCTION -> formatFunction(expressionContext.getFunction(), context);
+        };
     }
 
     private static String formatFunction(FunctionContext functionContext, Context context)
     {
         Optional<String> result = Optional.empty();
         if (functionContext.getType() == FunctionContext.Type.TRANSFORM) {
-            Rule<FunctionContext> rule = FUNCTION_RULE_MAP.get(TransformFunctionType.getTransformFunctionType(functionContext.getFunctionName()));
+            Rule<FunctionContext> rule = FUNCTION_RULE_MAP.get(getTransformFunctionType(functionContext).orElseThrow());
 
             if (rule != null) {
                 result = applyRule(rule, functionContext, context);
+            }
+            else {
+                result = applyRules(GLOBAL_FUNCTION_RULES, functionContext, context);
             }
         }
         else {
@@ -364,7 +369,7 @@ public class PinotSqlFormatter
                         .with(functionContext().matching(binaryFunction()
                                 .with(firstArgument().capturedAs(FIRST_ARGUMENT))
                                 .with(secondArgument().capturedAs(SECOND_ARGUMENT))
-                                .with(transformFunctionType().equalTo(MINUS))))));
+                                .with(transformFunctionName().matching(MINUS::equalsIgnoreCase))))));
 
         @Override
         public Pattern<Predicate> getPattern()
@@ -549,7 +554,7 @@ public class PinotSqlFormatter
         private static final Capture<ExpressionContext> FIRST_ARGUMENT = newCapture();
         private static final Capture<ExpressionContext> SECOND_ARGUMENT = newCapture();
         private static final Pattern<FunctionContext> PATTERN = binaryFunction()
-                .with(transformFunctionType().equalTo(MINUS))
+                .with(transformFunctionName().matching(MINUS::equalsIgnoreCase))
                 .with(firstArgument().capturedAs(FIRST_ARGUMENT))
                 .with(secondArgument().capturedAs(SECOND_ARGUMENT));
 
@@ -619,23 +624,18 @@ public class PinotSqlFormatter
                     .map(expressionContext -> formatExpression(expressionContext, context))
                     .collect(toImmutableList());
             checkState(arguments.size() >= 2, "Unexpected expression '%s'", object);
-            int whenStatements = arguments.size() / 2;
-            StringBuilder builder = new StringBuilder("CASE ");
-            builder.append("WHEN ")
-                    .append(arguments.get(0))
-                    .append(" THEN ")
-                    .append(arguments.get(whenStatements));
+            StringBuilder builder = new StringBuilder("CASE");
 
-            for (int index = 1; index < whenStatements; index++) {
+            for (int index = 0; index < arguments.size() / 2; index++) {
                 builder.append(" WHEN ")
-                        .append(arguments.get(index))
+                        .append(arguments.get(index * 2))
                         .append(" THEN ")
-                        .append(arguments.get(index + whenStatements));
+                        .append(arguments.get(index * 2 + 1));
             }
 
             if (arguments.size() % 2 != 0) {
                 builder.append(" ELSE ")
-                        .append(arguments.get(arguments.size() - 1));
+                        .append(arguments.getLast());
             }
             return builder.append(" END").toString();
         }
